[-] Add Dao interface, interface implementation, add Block domain class, add BlockFactory interface

--- a/app/src/main/res/layout-land/start_game.xml
+++ b/app/src/main/res/layout-land/start_game.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#fff"
     android:orientation="horizontal"
-    tools:context="ru.rienel.clicker.StartGameActivity">
+    tools:context="ru.rienel.clicker.activity.StartGameActivity">
 
     <TextView
         android:id="@+id/startTitle"
