--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="#fff"
     android:orientation="vertical"
-    tools:context="ru.rienel.clicker.activity.MainActivity">
+    tools:context="ru.rienel.clicker.activity.GameActivity">
 
 
     <TextView
