--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,6 @@
 
     <style name="ButtonInShop" parent="Base.AlertDialog.AppCompat.Light">
         <item name="android:textColor">@color/btnText</item>
-        <item name="android:onClick">onClick</item>
         <item name="android:textSize">28sp</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:padding">5dp</item>
@@ -21,14 +20,22 @@
 
     <style name="ButtonStart" parent="Base.AlertDialog.AppCompat.Light">
         <item name="android:textColor">@color/btnText</item>
-        <item name="android:onClick">onClick</item>
         <item name="android:background">@color/colorBtnShop</item>
         <item name="android:textSize">28sp</item>
         <item name="android:width">180dp</item>
         <item name="android:padding">5dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
+    </style>
 
+    <style name="ButtonMultiplayer" parent="Base.AlertDialog.AppCompat.Light">
+        <item name="android:textColor">@color/btnText</item>
+        <item name="android:background">@color/colorBtnShop</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:width">180dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
     </style>
 
 </resources>
