--- a/app/src/main/res/layout/start_game.xml
+++ b/app/src/main/res/layout/start_game.xml
@@ -25,7 +25,7 @@
 			/>
 
 	<Button
-			android:id="@+id/btnStart"
+			android:id="@+id/start"
 			android:layout_width="match_parent"
 			style="@style/ButtonStart"
 			android:layout_column="0"
@@ -49,9 +49,8 @@
 			/>
 
 	<Button
-			android:id="@+id/btnStatistic"
+			android:id="@+id/statistic"
 			android:layout_width="match_parent"
-
 			style="@style/ButtonStart"
 			android:layout_column="0"
 			android:layout_row="3"
