[-] Block Recycler View

--- a/app/src/main/res/layout/list_item_opponent.xml
+++ b/app/src/main/res/layout/list_item_opponent.xml
@@ -15,7 +15,7 @@
 
 	<TextView
 			android:id="@+id/list_item_opponent_name"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_toRightOf="@id/list_item_opponent_thumbnail"
 			/>
