--- a/app/src/main/res/layout/list_item_block.xml
+++ b/app/src/main/res/layout/list_item_block.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
 		>
 
 	<!--<ImageView-->
@@ -15,6 +16,8 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:id="@+id/block_number"
+			android:textSize="30dp"
+			app:layout_constraintTop_toTopOf="parent"
 			/>
 
 	<!-- Block message-->
@@ -22,6 +25,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:id="@+id/block_message"
+			app:layout_constraintLeft_toRightOf="@id/block_number"
 			/>
 
 	<!--Date of create-->
@@ -29,5 +33,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:id="@+id/block_date_of_create"
+			app:layout_constraintLeft_toRightOf="@id/block_number"
+			app:layout_constraintTop_toBottomOf="@id/block_message"
 			/>
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
