--- a/app/src/main/res/drawable/button_enable.xml
+++ b/app/src/main/res/drawable/button_enable.xml
@@ -15,7 +15,7 @@
     <item android:state_pressed="true">
         <shape>
             <solid
-                android:color="@color/btnPressed"/>
+                android:color="@color/pressed"/>
         </shape>
     </item>
 </selector>
