--- a/app/src/main/res/layout/opponents_activity.xml
+++ b/app/src/main/res/layout/opponents_activity.xml
@@ -2,10 +2,20 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
+			xmlns:app="http://schemas.android.com/apk/res-auto"
 			android:columnCount="1"
 			android:rowCount="2"
 			android:id="@+id/opponent_fragment_container"
 		>
+	<android.support.v7.widget.Toolbar
+			android:id="@+id/opponent_toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize"
+			android:background="@color/accent"
+			app:titleTextColor="@color/btnText"
+			android:elevation="4dp"
+			android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+	</android.support.v7.widget.Toolbar>
 
 	<TextView
 			android:layout_width="match_parent"
