--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,6 +47,11 @@
         <item name="android:layout_width">wrap_content</item>
     </style>
 
+	<style name="opponent_list_item">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/accent</item>
+        <item name="android:layout_marginLeft">5dp</item>
+    </style>
 
 
 </resources>
