--- a/app/src/main/res/layout/statistics_activity.xml
+++ b/app/src/main/res/layout/statistics_activity.xml
@@ -5,6 +5,7 @@
 		android:layout_height="match_parent"
 		android:columnCount="1"
 		android:rowCount="2"
+		android:background="#F3F0D1"
 		android:id="@+id/block_fragment_container"
 		>
 
