--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,5 +53,10 @@
         <item name="android:layout_marginLeft">5dp</item>
     </style>
 
+    <style name="TextStyle">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
 
 </resources>
