--- a/app/src/main/res/layout/shop_activity.xml
+++ b/app/src/main/res/layout/shop_activity.xml
@@ -46,7 +46,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/nameShop"
-            android:text="@string/description_2" />
+            android:text="@string/description_2"
+            android:onClick="onClick"
+            />
 
         <Button
             android:id="@+id/btn_4"
@@ -54,7 +56,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_2"
-            android:text="@string/description_4" />
+            android:text="@string/description_4"
+            android:onClick="onClick"
+            />
 
 
         <Button
@@ -63,7 +67,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_4"
-            android:text="@string/description_5" />
+            android:text="@string/description_5"
+            android:onClick="onClick"
+            />
 
         <Button
             android:id="@+id/btnBack"
@@ -81,6 +87,27 @@
             android:onClick="onClick"
             android:textSize="24sp"
             android:textColor="@color/btnText" />
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnBack"
+            android:text="@string/points"
+            />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView1"
+            android:text="@string/DPC"
+            />
 
     </android.support.constraint.ConstraintLayout>
 
