[#7] Migrating to MVP, add GameFragment, removed Time-Based game, code cleanup

--- a/app/src/main/res/layout/start_game.xml
+++ b/app/src/main/res/layout/start_game.xml
@@ -18,7 +18,7 @@
     >
 
     <ImageView
-        android:id="@+id/imageDonut"
+        android:id="@+id/donut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -32,7 +32,7 @@
 		android:id="@+id/activity_main"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_below="@+id/imageDonut"
+		android:layout_below="@+id/donut"
 		android:layout_alignParentStart="true">
 
 
