[#10] Added new buttons in GameActivity for using purchased items for common points       - Added two items: 1. Increment tap (increment tapping by +2); 2. Auto tap       - Renamed string resources       - Blocked third button in ShopActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,27 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageDonut" />
 
+    <Button
+        android:id="@+id/btnIncTap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/IncTap"
+        android:onClick="onClick"
+        style="@style/Widget.AppCompat.Button.Colored"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvPoints"
+        />
+
+    <Button
+        android:id="@+id/btnAutoTap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/AutoTap"
+        android:onClick="onClick"
+        style="@style/Widget.AppCompat.Button.Colored"
+        app:layout_constraintLeft_toRightOf="@id/btnIncTap"
+        app:layout_constraintTop_toBottomOf="@id/tvPoints"
+        />
 
 
 
