--- a/app/src/main/res/layout/dialog_changing.xml
+++ b/app/src/main/res/layout/dialog_changing.xml
@@ -16,6 +16,19 @@
         android:layout_height="wrap_content"
         app:items_visible="three" />
 
+    <ImageView
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/right" />
+
+    <ImageView
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/left" />
+
     <Button
         style="@style/TextStyle"
         android:background="@drawable/buttons_style"
