--- a/app/src/main/res/layout/dialog_changing.xml
+++ b/app/src/main/res/layout/dialog_changing.xml
@@ -19,12 +19,15 @@
     <ImageView
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:layout_marginEnd="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/right" />
 
     <ImageView
         android:layout_centerVertical="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/left" />
