--- a/app/src/main/res/layout/dialog_changing.xml
+++ b/app/src/main/res/layout/dialog_changing.xml
@@ -35,7 +35,7 @@
     <Button
         style="@style/TextStyle"
         android:background="@drawable/buttons_style"
-        android:id="@+id/button2"
+        android:id="@+id/select_donut"
         android:layout_below="@+id/carousel"
         android:layout_width="wrap_content"
         android:paddingLeft="15dp"
@@ -43,6 +43,6 @@
         android:layout_marginBottom="15dp"
         android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
-        android:text="Select" />
+        android:text="@string/select" />
 
 </RelativeLayout>
