--- a/app/src/main/res/layout/start_game.xml
+++ b/app/src/main/res/layout/start_game.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-											 xmlns:app="http://schemas.android.com/apk/res-auto"
-											 xmlns:tools="http://schemas.android.com/tools"
-											 android:layout_width="match_parent"
-											 android:layout_height="match_parent"
-											 android:background="#F3F0D1"
-
-											 tools:context="ru.rienel.clicker.activity.main.MainActivity">
+<android.support.constraint.ConstraintLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="#F3F0D1"
+		tools:context="ru.rienel.clicker.activity.main.MainActivity">
 
 	<RelativeLayout
 			android:layout_width="match_parent"
@@ -105,6 +105,7 @@
 					android:layout_row="4"
 					android:layout_gravity="center_horizontal"
 					android:layout_marginBottom="30dp"
+					app:layout_constraintTop_toBottomOf="@id/settings"
 					android:text="@string/shop"
 					android:drawableStart="@drawable/icon_sale"/>
 
@@ -120,8 +121,5 @@
 					style="@style/Widget.AppCompat.Button.Colored"
 					android:drawableStart="@drawable/icon_sale"/>
 		</android.support.constraint.ConstraintLayout>
-
-
 	</RelativeLayout>
-
 </android.support.constraint.ConstraintLayout>
