--- a/app/src/main/res/layout/dialog_changing.xml
+++ b/app/src/main/res/layout/dialog_changing.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:background="#F3F0D1">
 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="#F3F0D1"
-    >
+	<ru.rienel.clicker.common.CarouselPicker
+			android:id="@+id/carousel"
+			android:layout_marginTop="15dp"
+			android:layout_marginBottom="10dp"
+			android:layout_centerHorizontal="true"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			app:items_visible="three"/>
 
-    <ru.rienel.clicker.common.CarouselPicker
-        android:id="@+id/carousel"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:items_visible="three" />
+	<ImageView
+			android:layout_alignParentEnd="true"
+			android:layout_centerVertical="true"
+			android:layout_marginEnd="10dp"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			app:srcCompat="@drawable/right"/>
 
-    <ImageView
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/right" />
+	<ImageView
+			android:layout_centerVertical="true"
+			android:layout_marginStart="10dp"
+			android:layout_marginBottom="10dp"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			app:srcCompat="@drawable/left"/>
 
-    <ImageView
-        android:layout_centerVertical="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/left" />
-
-    <Button
-        style="@style/TextStyle"
-        android:background="@drawable/buttons_style"
-        android:id="@+id/select_donut"
-        android:layout_below="@+id/carousel"
-        android:layout_width="wrap_content"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        android:text="@string/select" />
-
+	<Button
+			style="@style/TextStyle"
+			android:background="@drawable/buttons_style"
+			android:id="@+id/select_donut"
+			android:layout_below="@+id/carousel"
+			android:layout_width="wrap_content"
+			android:paddingLeft="15dp"
+			android:paddingRight="15dp"
+			android:layout_marginBottom="15dp"
+			android:layout_centerHorizontal="true"
+			android:layout_height="wrap_content"
+			android:text="@string/select"/>
 </RelativeLayout>
